# FastApi

./: asgi.py  pyproject.toml  test.sh  정리 4.md  정리 5.md  정리2.md  정리3.md
.github/workflows/: ci.yml
app/: __init__.py
app/api/v1/: meeting_router.py  participant_router.py
app/configs/: __init__.py  base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  frozen_config.py  update_meeting_request.py
app/services/: meeting_service_mysql.py
app/tests/apis/v1/: meeting_router.py  test_meeting_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py  participant.py  participant_date.py
app/utils/: base62.py
migrations/models/: 0_20250821165433_init.py  1_20250824162746_update.py  2_20250825111124_update.py
